feat: added Kitten

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://unpkg.com/tailwindcss@^2.0/dist/tailwind.min.css" rel="stylesheet" />
   </head>
-  <body class="h-screen w-full">
-    <div class="text-gray-800 min-h-screen bg-gradient-to-b from-indigo-300 to-purple-400 py-6 flex flex-col justify-center items-center sm:py-12">
-        <div class="shadow-md max-w-lg bg-white px-8 py-8 rounded-sm">
-          <h1 class="text-2xl font-semibold mb-6 text-gray-800">Slipmat Labs</h1>
+  <body class="w-full h-screen">
+    <div class="flex flex-col items-center min-h-screen py-6 text-gray-800 bg-gradient-to-b from-indigo-300 to-purple-400 sm:py-12">
+        <div class="max-w-lg px-8 py-8 bg-white rounded-sm shadow-md">
+          <h1 class="mb-6 text-2xl font-semibold text-gray-800">Slipmat Labs</h1>
 
-          <p class="mb-6 text-gray-700 text-lg">Experimental projects for experimenting with new technologies and pushing the limits of technology.</p>
+          <p class="mb-6 text-lg text-gray-700">Experimental projects for experimenting with new technologies and pushing the limits of technology.</p>
           
-          <h2 class="text-xl font-medium text-gray-800 mb-4">API Projects</h2>
+          <h2 class="mb-4 text-xl font-medium text-gray-800">API Projects</h2>
 
           <ul class="list-disc list-inside">
             <li><a href="https://discogs-api.labs.slipmat.io/" class="text-indigo-600 underline hover:no-underline">Discogs artist search</a> - easy to use Discogs artist search API for internal projects</li>
@@ -22,20 +22,21 @@
             <li><a href="https://tidal-playlist-parser.labs.slipmat.io/" class="text-indigo-600 underline hover:no-underline">Tidal Playlist Parser</a> - easy to use API for parsing Tidal playlists</li>
           </ul>
 
-          <h2 class="text-xl font-medium text-gray-800 mb-4 mt-6">Tool Experiments</h2>
+          <h2 class="mt-6 mb-4 text-xl font-medium text-gray-800">Tool Experiments</h2>
 
           <ul class="list-disc list-inside">
-            <li><a href="https://scripter.labs.slipmat.io/show/demo/build/" class="text-indigo-600 underline hover:no-underline">Slipmat Show Scripter</a> - an experimental tool for building radio show scripts (and toolds for playing)</li>
-            <li><a href="https://eventplanner.now.sh/" class="text-indigo-600 underline hover:no-underline">Slipmat EventPlanner</a> - an experimental tool for organizing events (like festivals) across multiple timezones</li>
+            <li><a href="https://scripter.labs.slipmat.io/show/demo/build/" class="text-indigo-600 underline hover:no-underline">Slipmat Show Scripter</a> - experimental tool for building radio show scripts (and toolds for playing)</li>
+            <li><a href="https://eventplanner.now.sh/" class="text-indigo-600 underline hover:no-underline">Slipmat EventPlanner</a> - experimental tool for organizing events (like festivals) across multiple timezones</li>
+            <li><a href="https://kitten.slipmat.io" class="text-indigo-600 underline hover:no-underline">Kitten</a> - metadata tool for querying Web site metadata and taking automated screenshots</li>
           </ul>
 
-          <h2 class="text-xl font-medium text-gray-800 mb-4 mt-6">Code Experiments</h2>
+          <h2 class="mt-6 mb-4 text-xl font-medium text-gray-800">Code Experiments</h2>
 
           <ul class="list-disc list-inside">
             <li><a href="https://datatable-experiment.vercel.app/" class="text-indigo-600 underline hover:no-underline">Datatable experiment</a></li>
           </ul>
 
-          <div class="mt-10 text-gray-500 text-center"><p class="text-lg"><a class="underline" href="https://slipmat.io">Slipmat.io</a> Labs</p> <p>Made for the DJ community with <span class="text-red-500">❤️</span> by <a class="text-blue-500 font-semibold hover:underline" href="https://twitter.com/uninen">@Uninen</a></p></div>
+          <div class="mt-10 text-center text-gray-500"><p class="text-lg"><a class="underline" href="https://slipmat.io">Slipmat.io</a> Labs</p> <p>Made for the DJ community with <span class="text-red-500">❤️</span> by <a class="font-semibold text-blue-500 hover:underline" href="https://twitter.com/uninen">@Uninen</a></p></div>
         </div>
       </div>      
   </body>
