feat: added plausible analytics

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Experimental Slipmat.io projects." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://unpkg.com/tailwindcss@^2.0/dist/tailwind.min.css" rel="stylesheet" />
+    <script async defer data-domain="labs.slipmat.io" src="https://plausible.io/js/plausible.js"></script>
   </head>
   <body class="w-full h-screen">
     <div class="flex flex-col items-center min-h-screen py-6 text-gray-800 bg-gradient-to-b from-indigo-300 to-purple-400 sm:py-12">
