fix: content tweaks

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,8 @@
           <h2 class="mt-6 mb-4 text-xl font-medium text-gray-800">Code Experiments</h2>
 
           <ul class="list-disc list-inside">
-            <li><a href="https://datatable-experiment.vercel.app/" class="text-indigo-600 underline hover:no-underline">Datatable experiment</a></li>
+            <li><a href="https://developer.slipmat.io/" class="text-indigo-600 underline hover:no-underline">Slipmat Developer Docs</a> (<a href="https://gitlab.com/slipmatio/slipmat3-devdocs/" class="text-indigo-600 underline hover:no-underline">code</a>) - public documentation for the work ttowards Next Generation Slipmat</li>
+            <li><a href="https://datatable-experiment.vercel.app/" class="text-indigo-600 underline hover:no-underline">Datatable experiment</a> (<a href="https://github.com/Uninen/datatable-experiment" class="text-indigo-600 underline hover:no-underline">code</a>)</li>
           </ul>
 
           <div class="mt-10 text-center text-gray-500"><p class="text-lg"><a class="underline" href="https://slipmat.io">Slipmat.io</a> Labs</p> <p>Made for the DJ community with <span class="text-red-500">❤️</span> by <a class="font-semibold text-blue-500 hover:underline" href="https://twitter.com/uninen">@Uninen</a></p></div>
