--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
           <h2 class="mt-6 mb-4 text-xl font-medium text-gray-800">Tool Experiments</h2>
 
           <ul class="list-disc list-inside">
-            <li><a href="https://scripter.labs.slipmat.io/show/demo/build/" class="text-indigo-600 underline hover:no-underline">Slipmat Show Scripter</a> - experimental tool for building radio show scripts (and toolds for playing)</li>
+            <li><a href="https://scripter.labs.slipmat.io/show/demo/build/" class="text-indigo-600 underline hover:no-underline">Slipmat Show Scripter</a> - experimental tool for building radio show scripts (and tools for playing)</li>
             <li><a href="https://eventplanner.now.sh/" class="text-indigo-600 underline hover:no-underline">Slipmat EventPlanner</a> - experimental tool for organizing events (like festivals) across multiple timezones</li>
             <li><a href="https://kitten.slipmat.io" class="text-indigo-600 underline hover:no-underline">Kitten</a> - metadata tool for querying Web site metadata and taking automated screenshots</li>
           </ul>
