--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Experimental Slipmat.io projects." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://unpkg.com/tailwindcss@^2.0/dist/tailwind.min.css" rel="stylesheet" />
+    <link rel="icon" href="https://slipmatmedia.b-cdn.net/img/favicons/favicon.ico" />
     <script async defer data-domain="labs.slipmat.io" src="https://plausible.io/js/plausible.js"></script>
   </head>
   <body class="w-full h-screen">
