feat: added og-image

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,16 @@
     <meta name="description" content="Experimental Slipmat.io projects." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://unpkg.com/tailwindcss@^2.0/dist/tailwind.min.css" rel="stylesheet" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@slipmatio" />
+    <meta name="twitter:creator" content="@uninen" />
+    <meta name="twitter:image" content="https://labs.slipmat.io/static/slipmat-labs-v0.jpg" />
+
+    <meta property="og:title" content="Slipmat Lab" />
+    <meta property="og:image" content="https://labs.slipmat.io/static/slipmat-labs-v0.jpg" />
+    <meta property="og:description" content="Experimental Slipat.io projects." />
+
     <link rel="icon" href="https://slipmatmedia.b-cdn.net/img/favicons/favicon.ico" />
     <script async defer data-domain="labs.slipmat.io" src="https://plausible.io/js/plausible.js"></script>
   </head>
