--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <meta name="twitter:creator" content="@uninen" />
     <meta name="twitter:image" content="https://labs.slipmat.io/static/slipmat-labs-v0.jpg" />
 
-    <meta property="og:title" content="Slipmat Lab" />
+    <meta property="og:title" content="Slipmat Labs" />
     <meta property="og:image" content="https://labs.slipmat.io/static/slipmat-labs-v0.jpg" />
     <meta property="og:description" content="Experimental Slipat.io projects." />
 
