--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <div class="max-w-lg px-8 py-8 bg-white rounded-sm shadow-md">
           <h1 class="mb-6 text-2xl font-semibold text-gray-800">Slipmat Labs</h1>
 
-          <p class="mb-6 text-lg text-gray-700">Experimental projects for experimenting with new technologies and pushing the limits of technology.</p>
+          <p class="mb-6 text-lg text-gray-700">Experimental projects for experimenting with new technologies and pushing the limits of Web technology.</p>
           
           <h2 class="mb-2 text-xl font-medium text-gray-800">API Projects</h2>
 
