test new vercel deplo

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,14 +72,23 @@
           </li>
         </ul>
 
-        <h2 class="mt-6 mb-2 text-lg font-semibold text-gray-800">API Tools (For Developers)</h2>
+        <h2 class="mt-6 mb-2 text-lg font-semibold text-gray-800">APIs (For Developers)</h2>
 
         <p>
-          These APIs are open and free to use for all active Slipmat supporters. They are meant for
-          Slipmat-related projects only. We reserve the right to limit eccessive usage.
+          Free to use APIs for all active Slipmat community members. We reserve the right to limit
+          eccessive usage.
         </p>
 
         <ul class="mt-4 list-disc list-inside">
+          {#
+          <li>
+            <a href="https://slipmat.io/api/" class="text-indigo-600 underline hover:no-underline"
+              >Slipmat.io API</a
+            >
+            - Access all Slipmat functionality
+          </li>
+          #}
+
           <li>
             <a
               href="https://discogs-api.labs.slipmat.io/"
